name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Strelnikov Ilya Denisovich
maintainer:          strelnikovila@gmail.com
copyright:           2021 Strelnikov Ilya Denisovich

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  exposed-modules:
    HW3.Base
    HW3.Parser
    HW3.Pretty
    HW3.Evaluator
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, scientific,zlib,serialise, megaparsec,parser-combinators, bytestring, containers, haskeline,  prettyprinter, prettyprinter-ansi-terminal, text, transformers
  default-language:    Haskell2010

executable hi
  main-is:            Main.hs
  hs-source-dirs:
    app
  build-depends:
    base >= 4.9 && < 5, scientific, megaparsec, haskeline,zlib,serialise, parser-combinators, bytestring, prettyprinter,containers, prettyprinter-ansi-terminal, text, transformers, hw3